--- a/app-android/src/main/res/values/colors.xml
+++ b/app-android/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black30">#4D000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
