Apply status bar color

--- a/app-android/src/main/res/values/themes.xml
+++ b/app-android/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
     <style name="Theme.DroidKaigi.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Theme.DroidKaigi.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
