--- a/app-android/src/main/res/values/themes.xml
+++ b/app-android/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
 
     <style name="Platform.Theme.DroidKaigi" parent="Theme.Material3.DayNight">
         <item name="android:statusBarColor">@color/black30</item>
+        <item name="android:colorBackground">@color/neutralKeyColor10</item>
     </style>
 
     <style name="Theme.DroidKaigi" parent="Platform.Theme.DroidKaigi">
