add splash icon for api level lower than 31

--- a/app-android/src/main/res/drawable-v31/splash_icon.xml
+++ b/app-android/src/main/res/drawable-v31/splash_icon.xml
@@ -43,8 +43,7 @@
                     android:name="path_4"
                     android:pathData="M 41.52 61.54 C 39.79 59.13 38.74 56.58 38.74 53.96 C 38.74 51.35 39.79 48.81 41.52 46.39 C 42.96 44.38 46.08 41.16 49.75 37.9 C 49.91 37.76 49.91 37.5 49.74 37.37 C 47.04 35.17 44.42 33.32 42.57 32.49 C 37.59 30.24 30 32.72 30 38.8 L 30 69.14 C 30 75.22 38.11 77.71 42.64 75.37 C 44.3 74.51 46.97 72.48 49.76 70.15 C 49.93 70.01 49.93 69.76 49.78 69.62 C 48.39 68.36 42.61 63.06 41.52 61.54 Z"
                     android:fillColor="#ffffff"
-                    android:fillAlpha="0"
-                    android:strokeColor="#ffffff"/>
+                    android:fillAlpha="0"/>
                 <path
                     android:name="path_5"
                     android:pathData="M 62.12 32.48 C 67.1 30.24 74.69 32.72 74.69 38.8 L 74.69 69.14 C 74.69 75.22 66.57 77.71 62.05 75.37 C 57.52 73.04 45.47 61.94 43.94 59.81 C 41.2 56 41.2 51.94 43.94 48.12 C 46.68 44.31 57.14 34.72 62.12 32.48 Z"
