--- a/app-android/src/main/res/values-night/splash_theme.xml
+++ b/app-android/src/main/res/values-night/splash_theme.xml
@@ -3,7 +3,7 @@
 
     <style name="Theme.DroidKaigi.SplashTheme" parent="Theme.SplashScreen">
         <item name="windowSplashScreenAnimatedIcon">@drawable/splash_icon</item>
-        <item name="windowSplashScreenBackground">@android:color/white</item>
+        <item name="windowSplashScreenBackground">@android:color/black</item>
         <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/Theme.DroidKaigi.NoActionBar</item>
         <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">@drawable/splash_branding_image</item>
