--- a/app-android/src/main/res/values-night/splash_theme.xml
+++ b/app-android/src/main/res/values-night/splash_theme.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-
+    <!-- Night Mode Splash Screen Theme  -->
     <style name="Theme.DroidKaigi.SplashTheme" parent="Theme.SplashScreen">
         <item name="windowSplashScreenAnimatedIcon">@drawable/splash_icon</item>
         <item name="windowSplashScreenBackground">@android:color/black</item>
